<resources>
    <string name="app_name">Fresh Check</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="price">Rp. %1$s</string>
    <string name="reset">Reset</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="home">Home</string>
    <string name="detection">Detection</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="banner_home">Banner Home</string>
    <string name="item_shop">Item Shop</string>
    <string name="store_name">Store Name</string>
    <string name="item_name">Item Name</string>
    <string name="produk_sayur">Produk Sayur</string>
    <string name="arrow_home_fragment">Arrow Home Fragment</string>
    <string name="produk_buah">Produk Buah</string>
    <string name="detection_file">Detection File</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Log out</string>
    <string name="fresh_check">Fresh Check</string>
    <string name="reset_link_send">The reset link will be emailed to you.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="prediction">Prediction</string>
    <string name="back">Back</string>
    <string name="result">Result</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas turpis nisl, maximus vitae pharetra viverra.
        \nultricies id elit. Maecenas eu purus a mauris tincidunt aliquet et sit amet velit. Sed ut lectus ut ligula imperdiet
    </string>
    <string name="add_to_cart">Add to cart</string>
    <string name="level">Level : </string>
    <string name="banana">Banana</string>
    <string name="vegetable_fruit_name">Vegetable/Fruit Name :</string>
    <string name="fresh">Fresh</string>
    <string name="proceed">Proceed</string>
    <string name="history_is_empty">History is Empty</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
</resources>