<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reset_password"
        android:textColor="@color/light_green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reset_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/reset_link_send"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_reset_password"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_reset_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/dark_green"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_green"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/tv_reset_description"
        app:layout_constraintStart_toStartOf="@+id/tv_reset_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ti_reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ti_reset_password"
        app:layout_constraintTop_toBottomOf="@+id/ti_reset_password">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_bg"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_bg"
            android:backgroundTint="@color/light_green"
            android:text="@string/send"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>