<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <View
        android:id="@+id/vw_bg_dimmed_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dimmed"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/light_green"
            android:textSize="24sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:hint="@string/email"
            android:textColorHint="@color/dark_green"
            app:endIconMode="clear_text"
            app:endIconTint="@color/dark_green"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_email_24dp"
            app:startIconTint="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/password"
            android:textColorHint="@color/dark_green"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_green"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_lock_24dp"
            app:startIconTint="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_green" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded_bg"
            android:text="@string/login"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="@color/dark_green" />

        <TextView
            android:id="@+id/tv_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:textColor="@color/light_green"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>