<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.ProductDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_product_detail"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_product_detail_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_product_detail_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_close_24dp"
                app:tint="@color/light_orange" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_name_price_product_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_product_detail">

            <TextView
                android:id="@+id/tv_product_detail_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_product_detail_item_price"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/light_orange"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_product_detail_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ll_name_price_product_detail"
            app:layout_constraintStart_toStartOf="@id/ll_name_price_product_detail"
            app:layout_constraintTop_toBottomOf="@+id/ll_name_price_product_detail" />

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_to_cart"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_product_detail_item_description"
            app:layout_constraintStart_toStartOf="@+id/tv_product_detail_item_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>